# franken_engine

./: .agent-mail.yaml  .gitignore  AGENTS.md  Cargo.toml  PLAN_TO_CREATE_FRANKEN_ENGINE.md  README.md  update_beads.sh
crates/franken-engine/: Cargo.toml
crates/franken-engine/src/: activation_lifecycle.rs  adversarial_campaign.rs  adversarial_coevolution_harness.rs  alloc_domain.rs  ambient_authority.rs  anti_entropy.rs  assumptions_ledger.rs  ast.rs  attack_surface_game_model.rs  attestation_handshake.rs  attested_execution_cell.rs  baseline_interpreter.rs  bayesian_error_recovery.rs  bayesian_posterior.rs  benchmark_denominator.rs  benchmark_e2e.rs  bifurcation_boundary_scanner.rs  budgeted_optimization.rs  bulkhead.rs  bytecode_vm.rs  cancel_mask.rs  cancellation_lifecycle.rs  canonical_encoding.rs  canonical_evidence_emitter.rs  capability.rs  capability_token.rs  capability_witness.rs  catastrophic_tail_tournament_gate.rs  causal_regret_evidence_gate.rs  causal_replay.rs  checkpoint.rs  checkpoint_frontier.rs  closure_model.rs  compiler_policy.rs  conformance_catalog.rs  conformance_harness.rs  conformance_vector_gen.rs  constrained_ambient_benchmark_lane.rs  containment_executor.rs  control_plane_benchmark_split_gate.rs  (+226 more)
crates/franken-engine/tests/: activation_lifecycle.rs  activation_lifecycle_integration.rs  adr_fastapi_reuse_scope.rs  adr_frankensqlite_reuse_scope.rs  adr_frankentui_reuse_scope.rs  adversarial_campaign_edge_cases.rs  adversarial_campaign_gate_cli.rs  adversarial_campaign_generator.rs  adversarial_campaign_integration.rs  adversarial_coevolution_harness_integration.rs  alloc_domain_integration.rs  ambient_authority_integration.rs  anti_entropy_edge_cases.rs  anti_entropy_integration.rs  assumptions_ledger_enrichment_integration.rs  assumptions_ledger_integration.rs  ast_integration.rs  attack_surface_game_model_enrichment_integration.rs  attack_surface_game_model_integration.rs  attestation_handshake_enrichment_integration.rs  attestation_handshake_integration.rs  attestation_safe_mode_fallback.rs  attested_execution_cell_edge_cases.rs  attested_execution_cell_integration.rs  baseline_interpreter_edge_cases.rs  baseline_interpreter_integration.rs  bayesian_error_recovery_integration.rs  bayesian_posterior_integration.rs  benchmark_denominator.rs  benchmark_denominator_integration.rs  benchmark_e2e.rs  benchmark_e2e_enrichment_integration.rs  benchmark_e2e_integration.rs  bifurcation_boundary_scanner_integration.rs  budgeted_optimization_integration.rs  bulkhead_integration.rs  bytecode_vm.rs  cancel_mask_integration.rs  (+507 more)
crates/franken-metamorphic/: Cargo.toml  metamorphic_relations.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: decode_dos.rs  handshake_replay.rs  token_verification.rs
(+2251 files in other folders)
