[workspace]
members = [
  "crates/franken-engine",
  "crates/franken-extension-host",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Franken Engine Contributors"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
