[package]
name = "frankenengine-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
quickjs-native = []
v8-native = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"

[dev-dependencies]
serde_json.workspace = true
