[package]
name = "frankenengine-engine"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1.16", features = ["v7", "serde"] }
toml = "0.8"
franken-kernel = { path = "/dp/asupersync/franken_kernel" }
franken-decision = { path = "/dp/asupersync/franken_decision" }
franken-evidence = { path = "/dp/asupersync/franken_evidence" }
